[package]
name = "funtime"
version = "0.3.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A proc-macro helper to time Rust functions"
readme = "README.md"
keywords = ["stopwatch", "timing"]

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"


[lib]
proc-macro = true
